2005-06-04  Sven Neumann  <sven@gimp.org>

	* libgimp/libgimp-sections.txt
	* libgimp/libgimp.types
	* libgimpwidgets/libgimpwidgets-sections.txt
	* libgimpwidgets/tmpl/gimpstock.sgml: updated.

	* libgimp/tmpl/gimpdrawablecombobox.sgml
	* libgimp/tmpl/gimpenums.sgml
	* libgimp/tmpl/gimpvectors.sgml
	* libgimpwidgets/tmpl/gimpcolorarea.sgml: regenerated.

2005-05-29  Sven Neumann  <sven@gimp.org>

	* libgimp/libgimp-docs.sgml
	* libgimp/libgimp-sections.txt
	* libgimp/libgimp.types
	* libgimp/tmpl/gimpimagecombobox.sgml
	* libgimp/tmpl/gimpvectors.sgml: updated.

2005-05-25  Sven Neumann  <sven@gimp.org>

	* app/app-docs.sgml
	* app/app-sections.txt
	* app/app.types: updated.

2005-05-21  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/libgimpwidgets-docs.sgml
	* libgimpwidgets/libgimpwidgets-sections.txt
	* libgimpwidgets/tmpl/gimpcolorarea.sgml
	* libgimpwidgets/tmpl/gimpcolorbutton.sgml: updated.

	* libgimpwidgets/tmpl/gimpbrowser.sgml: new file.

	* tools/widgets.c: added GimpBrowser, changed widget packing.

2005-05-12  Sven Neumann  <sven@gimp.org>

	* app/app-docs.sgml
	* app/app-sections.txt
	* app/app.types: updated.

2005-05-07  Sven Neumann  <sven@gimp.org>

	* app/app-sections.txt: minor update.

2005-04-28  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/visual-index.xml
	* libgimpwidgets/images/gimp-pixmap.png: removed placeholder for
	GimpPixmap illustration. This widget is about to be deprecated
	anyway.

2005-04-28  Sven Neumann  <sven@gimp.org>

	* app/app-docs.sgml
	* app/app-sections.txt: updated.

2005-04-28  Sven Neumann  <sven@gimp.org>

	* tools/Makefile.am
	* tools/units.[ch]: added a very basic GimpUnit implementation.

	* tools/shooter.c
	* tools/widgets.c: initialize the units and enable GimpUnitMenu.

	* libgimpwidgets/images/*.png: regenerated.

2005-04-23  Sven Neumann  <sven@gimp.org>

	* tools/shooter.c: read the GIMP gtkrc file.

2005-04-23  Sven Neumann  <sven@gimp.org>

	* tools/shooter.c
	* tools/widgets.c: tweaked spacings.
