@@ -1,3 +1,7 @@
+2005-06-14  Sven Neumann  <sven@gimp.org>
+
+	* */Makefile.am: removed obsolete AUTOMAKE_OPTIONS. 
+
 2005-06-04  Sven Neumann  <sven@gimp.org>
 
 	* libgimp/libgimp-sections.txt
